@@ -1,3 +1,7 @@
+2004-11-23 Scott Dattalo <scott@dattalo.com>
+	* cli/input.cc: Fixed tab completion related window's crash
+	* gui/gui_symbols.cc: Windows doesn't support strndup()
+	
 2004-11-22 Scott Dattalo <scott@dattalo.com>
 	* cli/input.cc: buffer overflow in command_generator().
 	* src/ioports.cc, src/pic-registers.cc, src/registers.cc,
